# functional-diffusion-processes

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
conf/: default.yaml
conf/correctors/: langevin.yaml  none.yaml
conf/datasets/: celeba.yaml  mnist.yaml  spoken_digit.yaml
conf/experiments_maml/: eval_celeba.yaml  eval_mnist.yaml  exp_celeba.yaml  exp_colorizing.yaml  exp_deblurring.yaml  exp_inpainting.yaml  exp_mnist.yaml  exp_mnist_super_resolution.yaml  exp_sampling.yaml  exp_sampling_mnist.yaml  exp_spoken_digit.yaml
conf/experiments_vit/: eval_celeba.yaml  eval_celeba1.yaml  exp_celeba.yaml  exp_sampling_celeba.yaml  exp_sampling_spoken_digit.yaml  exp_spoken_digit.yaml  exp_spoken_digit_2.yaml
conf/hydra/: default.yaml
conf/losses/: mse_loss.yaml
conf/metrics/: metrics_celeba.yaml  metrics_mnist.yaml
conf/models/: mlp_modulation.yaml  uvit.yaml
conf/predictors/: euler.yaml  none.yaml  reverse_diffusion.yaml  semianalytic.yaml
conf/samplers/: pc_colorizer_sampler.yaml  pc_inpainter_sampler.yaml  pc_sampler.yaml
conf/sdes/: heat_subvp.yaml  unidimensional_heat_subvp.yaml
conf/trainers/: trainer_maml.yaml  trainer_vit.yaml
docs/: index.md
models/lenet5/: model-best.h5  saved_model.pb
scripts/maml/: colorize_celeba.sh  deblur_celeba.sh  eval_celeba.sh  eval_mnist.sh  inpaint_celeba.sh  run_mnist.sh  sample_celeba.sh  sample_mnist.sh  super_resolution_mnist.sh  train_celeba.sh  train_spoken_digit.sh
scripts/vit/: eval_celeba.sh  (+4 more)
(+62 files in other folders)
