[metadata]
name = functional-diffusion-processes
description = Official code for Continuous-Time Functional Diffusion Processes (NeurIPS 2023).
url = https://github.com/giulio98/functional-diffusion-processes
long_description = file: README.md
author = Giulio Franzese, Giulio Corallo, Simone Rossi, Markus Heinonen, Maurizio Filippone, Pietro Michiardi
author_email = giulio.franzese@eurecom.fr
keywords = generative-models, diffusion-processes, stochastic-partial-differential-equations, functional, score-based-generative-models, jax
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core==0.2.*

    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning==1.7.*
    torchmetrics==0.10.*
    hydra-core==1.2.*
    wandb
    streamlit
    hydra-joblib-launcher

    # Stable stuff usually backward compatible
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
